--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
     implementation 'com.github.nkzawa:socket.io-client:0.6.0'
     implementation 'org.apache.commons:commons-lang3:3.4'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
 
 }
 
